--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 
     <footer>www 🤑 Dice Game 🤑 2024</footer>
 
-    <script src="index.js" charset="tf-8"></script>
+    <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
